# SLAM2REF

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: cmake-single-platform.yml  cmake-single-platform_.yml
config/: params.yaml
include/0.Utils/: ParamServer.h  PcTransformations.h  PointCloudRegistration.h  Timer.h  utility.h
include/01.Slam2ref/: BetweenFactorWithAnchoring.h  KDTreeVectorOfVectorsAdaptor.h  RosParamServer.h  Scancontext.h  Session.h  Slam2ref.h  nanoflann.hpp
launch/: run.launch
src/0.Utils/: ParamServer.cpp  PcTransformations.cpp  PointCloudRegistration.cpp  utility.cpp
src/01.Slam2ref/: RosParamServer.cpp  Scancontext.cpp  Session.cpp  Slam2ref.cpp  Slam2ref_00_Init.cpp  Slam2ref_01_Loading.cpp  Slam2ref_02_Optimize.cpp  Slam2ref_03_LoopClosureRS.cpp  Slam2ref_04_LoopClosureKNN.cpp  Slam2ref_04_LoopClosureSC.cpp  Slam2ref_05_ICP.cpp  Slam2ref_05_ICP_MV.cpp  Slam2ref_06_Writing.cpp  main.cpp
